名称の変更
package.jsonでの名称が、
mcu-line-notifyではなくmcu_linenotifyになっていたので変更

--- a/mcu-line-notify.html
+++ b/mcu-line-notify.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('mcu-line-notify',{
+    RED.nodes.registerType('mcu_linenotify',{
         category: 'MCU',
         color: '#a2aaff',
         defaults: {
@@ -13,12 +13,12 @@
         icon: "comment.png",
         align: "right",
         label: function() {
-            return this.name||"mcu-line-notify";
+            return this.name||"mcu_linenotify";
         }
     });
 </script>
 
-<script type="text/html" data-template-name="mcu-line-notify">
+<script type="text/html" data-template-name="mcu_linenotify">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -29,6 +29,6 @@
     </div>
 </script>
 
-<script type="text/html" data-help-name="mcu-line-notify">
+<script type="text/html" data-help-name="mcu_linenotify">
     <p>LINE Notify for Node-RED MCU</p>
 </script>
