エラー："cannot coerce undefined to object"への対応
credentialsだとトークンが保存されない可能性を考えて変更

--- a/mcu_linenotify.html
+++ b/mcu_linenotify.html
@@ -3,10 +3,8 @@
         category: 'MCU',
         color: '#a2aaff',
         defaults: {
-            name: {value:""}
-        },
-        credentials: {
-            AccessToken: { type: "password", required: true }
+            name: {value:""},
+            AccessToken: {type:"password"}
         },
         inputs:1,
         outputs:1,
